# ACT

./: Cargo.toml  main.tex
src/: batched_eq.rs  bbs_proof.rs  bulletproofs.rs  commitments.rs  epoch_refresh.rs  error.rs  hash.rs  lib.rs  master_mint.rs  msm.rs  server.rs  setup.rs  spend.rs  types.rs
tests/: performance.rs
